--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>=== TRÒ CHƠI TÀI XỈU BY VANH DEV ===</h1>
+        <h1>=== TRÒ CHƠI TÀI XỈU BY Tống Trần Kiên ===</h1>
         <!-- Màn hình đăng nhập -->
         <div id="login-screen">
             <h2>Đăng Nhập</h2>
